<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.details.ChargeDetailsFragment">

	<com.babestudios.base.view.ParallaxAppBarView
		android:id="@+id/pabChargeDetails"
		android:layout_width="match_parent"
		android:layout_height="@dimen/appBarHeight"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:imageViewSrc="@drawable/bg_charges" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true"
		android:paddingBottom="@dimen/viewMarginExtraLarge"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/viewMarginLarge">

			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.4" />

			<androidx.constraintlayout.widget.Group
				android:id="@+id/groupChargeDetails"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="visible"
				app:constraint_referenced_ids="cpnChargeDetailsContainsFloatingCharge, lblChargeDetailsContainsFloatingCharge, cpnChargeDetailsFloatingChargeCoversAll, lblChargeDetailsFloatingChargeCoversAll, cpnChargeDetailsContainsNegativePledge, lblChargeDetailsContainsNegativePledge, cpnChargeDetailsContainsFixedCharge, lblChargeDetailsContainsFixedCharge" />

			<TextView
				android:id="@+id/cpnChargeDetailsDeliveredOn"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:text="@string/charge_details_delivered_on"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/lblChargeDetailsDeliveredOn"
				style="@style/Text.Bold"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsDeliveredOn"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="2016-11-08" />

			<TextView
				android:id="@+id/cpnChargeDetailsStatus"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="1"
				android:text="@string/charge_details_status"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cpnChargeDetailsDeliveredOn" />

			<TextView
				android:id="@+id/lblChargeDetailsStatus"
				style="@style/Text.Bold"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsStatus"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Outstanding" />

			<TextView
				android:id="@+id/cpnChargeDetailsContainsFloatingCharge"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="2"
				android:text="@string/charge_details_contains_floating_charge"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/lblChargeDetailsStatus" />

			<TextView
				android:id="@+id/lblChargeDetailsContainsFloatingCharge"
				style="@style/Text.Bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsContainsFloatingCharge"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Yes" />

			<TextView
				android:id="@+id/cpnChargeDetailsFloatingChargeCoversAll"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="2"
				android:text="@string/charge_details_floating_charge_covers_all"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cpnChargeDetailsContainsFloatingCharge" />

			<TextView
				android:id="@+id/lblChargeDetailsFloatingChargeCoversAll"
				style="@style/Text.Bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsFloatingChargeCoversAll"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Yes" />

			<TextView
				android:id="@+id/cpnChargeDetailsContainsNegativePledge"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="2"
				android:text="@string/charge_details_contains_negative_pledge"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cpnChargeDetailsFloatingChargeCoversAll" />

			<TextView
				android:id="@+id/lblChargeDetailsContainsNegativePledge"
				style="@style/Text.Bold"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsContainsNegativePledge"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Yes" />

			<TextView
				android:id="@+id/cpnChargeDetailsContainsFixedCharge"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="2"
				android:text="@string/charge_details_contains_fixed_charge"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cpnChargeDetailsContainsNegativePledge" />

			<TextView
				android:id="@+id/lblChargeDetailsContainsFixedCharge"
				style="@style/Text.Bold"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsContainsFixedCharge"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Yes" />

			<TextView
				android:id="@+id/cpnChargeDetailsSatisfiedOn"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="1"
				android:text="@string/charge_details_satisfied_on"
				android:visibility="gone"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cpnChargeDetailsContainsFixedCharge"
				tools:visibility="visible" />

			<TextView
				android:id="@+id/lblChargeDetailsSatisfiedOn"
				style="@style/Text.Bold"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsSatisfiedOn"
				tools:text="2016-12-18" />

			<TextView
				android:id="@+id/cpnChargeDetailsPersonsEntitled"
				style="@style/Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:layout_marginEnd="0dp"
				android:maxLines="1"
				android:text="@string/charge_details_persons_entitled"
				app:autoSizeMaxTextSize="@dimen/textSizeBody1"
				app:autoSizeMinTextSize="@dimen/textSizeCaption"
				app:autoSizeTextType="uniform"
				app:layout_constraintEnd_toEndOf="@id/guideline"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cpnChargeDetailsSatisfiedOn" />

			<TextView
				android:id="@+id/lblChargeDetailsPersonsEntitled"
				style="@style/Text.Bold"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/cpnChargeDetailsPersonsEntitled"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Barclays Bank PLC" />

			<View
				android:id="@+id/divChargeDetails"
				android:layout_width="0dp"
				android:layout_height="1dp"
				android:layout_marginTop="@dimen/viewMarginLarge"
				android:background="@color/translucentBlack"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/lblChargeDetailsPersonsEntitled" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rvChargeDetails"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scrollbars="vertical"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/divChargeDetails" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
